--- a/daily diary/May-2023.md
+++ b/daily diary/May-2023.md
@@ -3,3 +3,9 @@
 - Learnt  emacs + doom
 - Read through and analyse code in the coop-templates
 - Paired with hippie on iipod template 
+
+# May 4th 2023
+- Pair with Zach on some emacs stuff 
+- worked on personal website 
+- A lot of UNI work 
+- Tried out some minecraft worlds
